--- a/FuckOff/FuckOff/FuckOff.csproj
+++ b/FuckOff/FuckOff/FuckOff.csproj
@@ -35,20 +35,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AboutPage.xaml.cs">
+    <Compile Include="AboutPage\AboutPage.xaml.cs">
       <DependentUpon>AboutPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AboutPageViewModel.cs" />
+    <Compile Include="AboutPage\AboutPageViewModel.cs" />
     <Compile Include="App.cs" />
-    <Compile Include="FuckOffService.cs" />
-    <Compile Include="FuckOffSettings.cs" />
-    <Compile Include="IInfoService.cs" />
-    <Compile Include="MainPage.xaml.cs">
+    <Compile Include="Service\FuckOffService.cs" />
+    <Compile Include="Service\FuckOffSettings.cs" />
+    <Compile Include="Service\IInfoService.cs" />
+    <Compile Include="MainPage\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainPageViewModel.cs" />
+    <Compile Include="MainPage\MainPageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModelBase.cs" />
+    <Compile Include="SettingsPage\SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SettingsPage\SettingsPageViewModel.cs" />
+    <Compile Include="Service\ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -68,13 +72,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="MainPage.xaml">
+    <EmbeddedResource Include="MainPage\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="AboutPage.xaml">
+    <EmbeddedResource Include="AboutPage\AboutPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SettingsPage\SettingsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
