--- a/FuckOff/FuckOff/FuckOff.csproj
+++ b/FuckOff/FuckOff/FuckOff.csproj
@@ -40,6 +40,7 @@
     </Compile>
     <Compile Include="AboutPage\AboutPageViewModel.cs" />
     <Compile Include="App.cs" />
+    <Compile Include="Service\PropertyHandler.cs" />
     <Compile Include="Service\FuckOffService.cs" />
     <Compile Include="Service\FuckOffSettings.cs" />
     <Compile Include="Service\IInfoService.cs" />
