--- a/FuckOff/FuckOff/FuckOff.csproj
+++ b/FuckOff/FuckOff/FuckOff.csproj
@@ -40,6 +40,8 @@
     </Compile>
     <Compile Include="AboutPage\AboutPageViewModel.cs" />
     <Compile Include="App.cs" />
+    <Compile Include="Service\EmptyUrlException.cs" />
+    <Compile Include="Service\FoaasAPI.cs" />
     <Compile Include="Service\PropertyHandler.cs" />
     <Compile Include="Service\FuckOffService.cs" />
     <Compile Include="Service\FuckOffSettings.cs" />
@@ -49,6 +51,7 @@
     </Compile>
     <Compile Include="MainPage\MainPageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\WebRequestWrapper.cs" />
     <Compile Include="SettingsPage\SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
@@ -59,6 +62,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="System.Net.Http">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\WindowsPhoneApp\v8.1\System.Net.Http.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.3.3.193\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Core.dll</HintPath>
       <Private>True</Private>
