--- a/FuckOff/FuckOff/FuckOff.csproj
+++ b/FuckOff/FuckOff/FuckOff.csproj
@@ -42,6 +42,7 @@
     <Compile Include="App.cs" />
     <Compile Include="Service\EmptyUrlException.cs" />
     <Compile Include="Service\FoaasAPI.cs" />
+    <Compile Include="Service\ImageResourceExtension.cs" />
     <Compile Include="Service\PropertyHandler.cs" />
     <Compile Include="Service\FuckOffService.cs" />
     <Compile Include="Service\FuckOffSettings.cs" />
@@ -95,6 +96,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Images\old_man.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
